--- a/rooms.html
+++ b/rooms.html
@@ -18,10 +18,10 @@
                 <a href="./index.html"><img src="./logo.png" alt=""></a>
                 
                 <nav class="navigation">
-                    <a href="#" class="nav-link">Our Hotel</a>
+                    <a href="./index.html" class="nav-link">Our Hotel</a>
                     <a href="./rooms.html" class="nav-link">Rooms & Rates</a>
                     <a href="#" class="nav-link">Facilities</a>
-                    <a href="#" class="nav-link">Contact Us</a>
+                    <a href="#footer" class="nav-link">Contact Us</a>
     
                 </nav>
 
